syntax = "proto3";
package umeenetwork.umee.peggy.v1;

import "umee/peggy/v1/attestation.proto";

option go_package = "github.com/umee-network/umee/x/peggy/types";

// OutgoingTxBatch represents a batch of transactions going from Peggy to ETH
message OutgoingTxBatch {
  uint64                      batch_nonce    = 1;
  uint64                      batch_timeout  = 2;
  repeated OutgoingTransferTx transactions   = 3;
  string                      token_contract = 4;
  uint64                      block          = 5;
}

// OutgoingTransferTx represents an individual send from Peggy to ETH
message OutgoingTransferTx {
  uint64     id           = 1;
  string     sender       = 2;
  string     dest_address = 3;
  ERC20Token erc20_token  = 4;
  ERC20Token erc20_fee    = 5;
}
